dynamically_typed_tests/invalid/function/became_valid/funcVarAccess.wacc
# functions cannot access global variables

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
	int f() is
    x = -1 ;
		return 0
	end
  x = 5 ;
  y = call f() ;
  println x
end
	
